erDiagram
    PLAYER {
        int player_id PK
        string player_name
        string position_group
        string position
    }

    TEAM {
        int team_id PK
        string team_name
    }

    SEASON {
        int season_id PK
        string season_name
    }

    GAME {
        int game_id PK
        int season_id FK
        int home_team_id FK
        int away_team_id FK
        date game_date
    }

    PLAYER_TEAM_SEASON {
        int player_id FK
        int team_id FK
        int season_id FK
        date start_date
        date end_date
    }

    COURT_ZONE {
        int zone_id PK
        string basic_zone
        string zone_name
        string zone_abb
        string zone_range
        float min_x
        float max_x
        float min_y
        float max_y
        boolean is_three_point
        float expected_points
    }

    SHOT {
        int shot_id PK
        int game_id FK
        int player_id FK
        int team_id FK
        int zone_id FK
        string event_type
        boolean shot_made
        string action_type
        string shot_type
        float loc_x
        float loc_y
        float shot_distance
        int quarter
        int mins_left
        int secs_left
    }

    PLAYER ||--o{ PLAYER_TEAM_SEASON : "plays for"
    TEAM ||--o{ PLAYER_TEAM_SEASON : "has"
    SEASON ||--o{ PLAYER_TEAM_SEASON : "includes"
    
    SEASON ||--o{ GAME : "contains"
    TEAM ||--o{ GAME : "plays as home"
    TEAM ||--o{ GAME : "plays as away"
    
    GAME ||--o{ SHOT : "has"
    PLAYER ||--o{ SHOT : "takes"
    TEAM ||--o{ SHOT : "records"
    COURT_ZONE ||--o{ SHOT : "contains"
